change index.html in navigation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">restorants</a></li>
+        <li><a href="#">restaurants</a></li>
         <li><a href="#">events</a></li>
         <li><a href="#">gallery</a></li>
         <li><a href="#">contact</a></li>
