Add BurgerMenu JS and CSS

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">restaurants</a></li>
-        <li><a href="#">events</a></li>
-        <li><a href="#">gallery</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="#restaurants">restaurants</a></li>
+        <li><a href="#events">events</a></li>
+        <li><a href="#gallery">gallery</a></li>
+        <li><a href="#contact">contact</a></li>
       </ul>
       <i class="fas fa-bars"></i>
+      <i class="fas fa-times"></i>
     </nav>
     <img src="pictures/burger-craft-logo.png" alt="" class="logo">
     <button class="button-1">View Menu <img class="icon" src="pictures/goto.png"></button>
@@ -249,6 +250,7 @@
       Company | Privacy Policy | Terms & Conditions
     </div>
   </footer>
+  <script src="burgermenu.js"></script>
 </body>
 
 </html>
