Add img to description section, change font sizes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           today!</p>
       </div>
       <div class="description-right">
-
+        <img src="pictures/slider-frames.png" alt="">
       </div>
     </div>
   </section>
