--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
   </section>
   <section class="opinions">
     <div class="wrap">
-      <div class="opinion">
-        <p>“The burger was tasty and the sweet potato fries were the best I’ve had.”</p>
+      <i class="fas fa-chevron-up blocked-arrow"></i>
+      <div class="opinion show-opinion">
+        <p>“This place is the best. Cheeseburger medium rare THE WORKS and an order of fries to share. SO good. its a
+          little more expensive compared to say Shake Shack BUT SO MUCH BETTER.”</p>
         <img src="pictures/five-stars.png" alt="">
         <h4>– Matt C</h4>
       </div>
@@ -130,7 +132,10 @@
         <img src="pictures/five-stars.png" alt="">
         <h4>– Melanie B</h4>
       </div>
-      <button class="button-3">Leave A Review</button>
+      <i class="fas fa-chevron-down"></i>
+      <div class="btndiv">
+        <button class="button-3">Leave A Review</button>
+      </div>
     </div>
   </section>
   <section class="learn-more">
@@ -251,6 +256,7 @@
     </div>
   </footer>
   <script src="burgermenu.js"></script>
+  <script src="opinionslider.js"></script>
 </body>
 
 </html>
