optimize css styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <i class="fas fa-times"></i>
     </nav>
     <img src="pictures/burger-craft-logo.png" alt="" class="logo">
-    <button class="button-1">View Menu <img class="icon" src="pictures/goto.png"></button>
+    <button class="button btn1">View Menu <img class="icon" src="pictures/goto.png"></button>
   </header>
   <section class="description ">
     <div class="wrap">
@@ -97,7 +97,7 @@
           vegan menu items. Don’t let your diet keep you away and come visit them in The Colony today!</p>
       </div>
     </div>
-    <button class="button-2">View Menu <img class="icon" src="pictures/goto.png"></button>
+    <button class="button btn2">View Menu <img class="icon" src="pictures/goto.png"></button>
   </section>
   <section class="favorites">
     <h2>urban8 favorites</h2>
@@ -134,7 +134,7 @@
       </div>
       <i class="fas fa-chevron-down"></i>
       <div class="btndiv">
-        <button class="button-3">Leave A Review</button>
+        <button class="button btn3">Leave A Review</button>
       </div>
     </div>
   </section>
@@ -144,7 +144,7 @@
       <p>Whether it’s just you or a group of people, Urban8 is the place to be! With 8 chef-driven restaurants offering
         a variety of cuisine you can forget about your hunger and enjoy the lively atmosphere. Visit us during Happy
         Hour to take advantage of our drink specials!</p>
-      <button class="button-4">Leave A Review</button>
+      <button class="button btn4">Leave A Review</button>
     </div>
   </section>
   <section class="restaurants">
@@ -224,11 +224,11 @@
         </p>
         <p>Come visit today!</p>
         <p>Read more on our blog.</p>
-        <button class="button-5">Apply for a job</button>
+        <button class="button btn5">Apply for a job</button>
       </div>
       <div class="form">
         <h2>Become an Urban8er!</h2>
-        <form><input type="text" name="" id=""><button class="button-6">Submit</button></form>
+        <form><input type="text" name="" id=""><button class="btn6">Submit</button></form>
         <h2>Contact</h2>
         <p>Phone: (469) 301-2416</p>
         <p>Hours:</p>
